syntax = "proto3";

package calculator;

//option go_package = "./";
option go_package = "Hung/Hung-Test/Test-gRPC/calculator";

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 result = 1;
}
//
//message PNDRequest {
//  int32 num1 = 1;
//}
//
//message PNDResponse {
//  int32 result = 1;
//}

message AverageRequest {
  float num =1;
}

message AverageResponse {
  float result = 1;
}

message FindMaxRequest {
  int32 num = 1;
}

message FindMaxResponse {
  int32 max = 1;
}

message SquareRequest {
  int32 num = 1;
}

message SquareResponse {
  double squareRoot = 1;
}

service CalculatorService {
  //Unary API: 1-1
  rpc Sum(SumRequest) returns (SumResponse) {}
  //Server Streaming API: 1-n
//  rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse) {}
  //Client Streaming API: n-1
  rpc Average(stream AverageRequest) returns (AverageResponse) {}
  //Bi-Directional Streaming API: n-n
  rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {}
  //handle Error
  rpc Square(SquareRequest) returns (SquareResponse) {}
}